# Learning-web-automation

./: README.md  pyproject.toml
features/: Jira.feature  environment.py  google_search.feature
features/steps/: google.py  jira.py  tutorial.py
